--- a/fitcoin-app/src/app/redeem-fitcoins-form/redeem-fitcoins-form.component.html
+++ b/fitcoin-app/src/app/redeem-fitcoins-form/redeem-fitcoins-form.component.html
@@ -1,14 +1,14 @@
 
  	<!-- Modal -->
-	<div class="modal fade" aria-hidden="true" id="redeemFitCoinsShow" role="dialog">
+	<div class="modal fade" aria-hidden="true" id="redeemFitcoinsShow" role="dialog">
 	  <div class="modal-dialog" role="document">
 	    <div class="modal-content">
 	      <div class="modal-header">
 	        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-	        <h4 class="modal-title" id="myModalLabel">Redeem FitCoins</h4>
+	        <h4 class="modal-title" id="myModalLabel">Redeem Fitcoins</h4>
 	      </div>
 	      <div class="modal-body">
-	       <form novalidate #redeemFitCoinsForm="ngForm">
+	       <form novalidate #redeemFitcoinsForm="ngForm">
 	       	  <input name="memberId" [(ngModel)]="this.personId" type="text" class="form-control">
 			  <div class="form-group">
 			    <label for="store">Store</label>
@@ -32,7 +32,7 @@
 	      </div>
 	      <div class="modal-footer">
 	        <button type="button" class="btn btn-default" data-dismiss="modal" (click)="closeForm()">Close</button>
-	        <button type="button" class="btn btn-primary" (click)="redeemFitCoins()" data-dismiss="modal">Redeem FitCoins</button>
+	        <button type="button" class="btn btn-primary" (click)="redeemFitcoins()" data-dismiss="modal">Redeem Fitcoins</button>
 	      </div>
 	    </div>
 	  </div>
